--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.10.1",
     "apollo-server-express": "^3.11.1",
     "graphql": "^16.6.0",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +46,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "prisma": "^4.10.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
